<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="take.me.home.MainActivity$PlaceholderFragment" >

   

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/Question" />

    <EditText
        android:id="@+id/answer"
        android:textSize="17sp"
		android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
   
        android:ems="10"
        android:hint="@string/Question_hint" />

    <Button
        android:id="@+id/Button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer"
        android:layout_centerHorizontal="true"
        android:text="@string/Button_search" />

    <Button
        android:id="@+id/Button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/Button_go_home" />

</RelativeLayout>
